# RT-FEM

./: .gitignore  CMakeLists.txt  ReadMe.md
documentation/uml/: fem.vpp  (+5 more)
sources/: CMakeLists.txt
sources/include/RTFEM/: DataTypes.h  Timer.h
sources/include/RTFEM/DataStructure/: Dense2SparseMatrix.h  Matrix.h  SparseMatrixCSR.h  Vector3.h  Vector4.h
sources/include/RTFEM/FEM/: BoundaryCondition.h  BoundaryConditionContainer.h  FEMGeometry.h  FEMModel.h  FiniteElement.h  Material.h  Vertex.h
sources/include/RTFEM/FEM/FiniteElements/: FiniteElementType.h  TetrahedronFiniteElement.h
sources/include/RTFEM/FEM/Meshing/: AABB.h  AABBAlgorithms.h  Intersections.h  RandomDistributions.h  Tetrahedralization.h  TriangleMesh.h
sources/include/RTFEM/FEM/Solver/: FEMAssembler.h  FEMGlobalAssembler.h  FEMSolver.h  FEMSolverTypes.h  FiniteElementSolver.h  GlobalStiffnessAssembler.h
sources/include/RTFEM/GPU/: CudaFunctionMacros.cuh  GPUMMMultiplication.cuh  GPUMVMultiplication.cuh  GPUMVSparseMultiplication.cuh  GPUMatrixMultiplication.cuh
sources/include/RTFEM/GPU/DeviceProperties/: DeviceProperties.cuh  DevicesProperties.cuh
sources/include/RTFEM/GPU/LinearSolver/: GPULULinearSolver.cuh  GPULinearSolver.cuh  GPUSparseCGLinearSolver.cuh  GPUSparseCGPrecondLinearSolver.cuh  GPUSparseLULinearSolver.cuh  GPUSparseLinearSolver.cuh  GPUSparsePreCondLinearSolver.cuh  LinearSolver.cuh
sources/include/RTFEM/GPU/VectorAdd/: VectorAdd.cuh
sources/include/RTFEM/Math/: MatrixMath.h  VectorMath.h
sources/include/RTFEM/Memory/: UniquePointer.h
sources/src/RTFEM/DataStructure/: Dense2SparseMatrix.cpp  Matrix.cpp  SparseMatrixCSR.cpp  Vector3.cpp  Vector4.cpp
sources/src/RTFEM/FEM/: BoundaryCondition.cpp  BoundaryConditionContainer.cpp  FEMGeometry.cpp  FEMModel.cpp  FiniteElement.cpp  Material.cpp  Vertex.cpp
sources/src/RTFEM/FEM/FiniteElements/: TetrahedronFiniteElement.cpp
sources/src/RTFEM/FEM/Meshing/: AABB.cpp  AABBAlgorithms.cpp  Intersections.cpp  RandomDistributions.cpp  Tetrahedralization.cpp  TriangleMesh.cpp
sources/src/RTFEM/FEM/Solver/: FEMAssembler.cpp  FEMGlobalAssembler.cpp  FEMSolver.cpp  FiniteElementSolver.cpp  GlobalStiffnessAssembler.cpp
sources/src/RTFEM/GPU/: GPUMMMultiplication.cu  GPUMVMultiplication.cu  GPUMVSparseMultiplication.cu  GPUMatrixMultiplication.cu
sources/src/RTFEM/GPU/DeviceProperties/: DeviceProperties.cu  DevicesProperties.cu
sources/src/RTFEM/GPU/LinearSolver/: GPULULinearSolver.cu  GPULinearSolver.cu  GPUSparseCGLinearSolver.cu  GPUSparseCGPrecondLinearSolver.cu  GPUSparseLULinearSolver.cu  GPUSparseLinearSolver.cu  GPUSparsePreCondLinearSolver.cu  LinearSolver.cu
sources/src/RTFEM/GPU/VectorAdd/: VectorAdd.cu
sources/src/RTFEM/Math/: MatrixMath.cpp  VectorMath.cpp
sources/src/RTFEM/Memory/: UniquePointer.cpp
tests/: CMakeLists.txt
tests/include/RTFEMTests/Builder/: FEMModelBoxBuilder.h  FEMModelSampleBuilder.h  TriangleMeshBuilder.h
tests/include/RTFEMTests/DataStructure/: Dense2SparseMatrixTest.h  MatrixTest.h  Vector3Test.h
tests/include/RTFEMTests/ExternalIntergrations/: EigenTest.h  TetgenTest.h
tests/include/RTFEMTests/FEM/: BoundaryConditionTest.h  FEMModelTest.h  VertexTest.h
tests/include/RTFEMTests/FEM/FiniteElements/: TetrahedronFiniteElementTest.h
tests/include/RTFEMTests/FEM/Meshing/: AABBAlgorithmsTest.h  IntersectionsTest.h  TetrahedralizationTest.h  TriangleFaceTest.h
tests/include/RTFEMTests/FEM/Solver/: FEMAssemblerTest.h  FEMGlobalAssemblerTest.h  FEMSolverTest.h  GlobalStiffnessAssemblerTest.h
tests/include/RTFEMTests/GPU/: GPUMMMultiplicationTest.h  GPUMVMultiplicationTest.h  GPUMVSparseMultiplicationTest.h  GPUMatrixMultiplicationTest.h  VectorAddTest.h
tests/include/RTFEMTests/GPU/DeviceProperties/: DevicePropertiesTest.h
tests/include/RTFEMTests/GPU/LinearSolver/: GPULinearSolverTest.h  GPUSparseLinearSolverTest.h
tests/include/RTFEMTests/Math/: MatrixMathTest.h  VectorMathTest.h
tests/src/RTFEMTests/: DataTypesTest.cpp
tests/src/RTFEMTests/Builder/: FEMModelBoxBuilder.cpp  FEMModelSampleBuilder.cpp  TriangleMeshBuilder.cpp
tests/src/RTFEMTests/DataStructure/: Dense2SparseMatrixTest.cpp  MatrixTest.cpp  Vector3Test.cpp
tests/src/RTFEMTests/ExternalIntergrations/: EigenTest.cpp  TetgenTest.cpp
tests/src/RTFEMTests/FEM/: BoundaryConditionTest.cpp  FEMModelTest.cpp  VertexTest.cpp
tests/src/RTFEMTests/FEM/FiniteElements/: TetrahedronFiniteElementTest.cpp
tests/src/RTFEMTests/FEM/Meshing/: AABBAlgorithmsTest.cpp  IntersectionsTest.cpp  TetrahedralizationTest.cpp  TriangleFaceTest.cpp
tests/src/RTFEMTests/FEM/Solver/: FEMAssemblerTest.cpp  FEMGlobalAssemblerTest.cpp  FEMSolverTest.cpp  GlobalStiffnessAssemblerTest.cpp
tests/src/RTFEMTests/GPU/: GPUMMMultiplicationTest.cpp  GPUMVMultiplicationTest.cpp  GPUMVSparseMultiplicationTest.cpp  GPUMatrixMultiplicationTest.cpp  VectorAddTest.cpp
tests/src/RTFEMTests/GPU/DeviceProperties/: DevicePropertiesTest.cpp
tests/src/RTFEMTests/GPU/LinearSolver/: GPULinearSolverTest.cpp  GPUSparseLinearSolverTest.cpp
tests/src/RTFEMTests/Math/: MatrixMathTest.cpp  VectorMathTest.cpp
(+175 files in other folders)
